--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: "Circular Std", Sans-serif;
 }
 
 /* Header Start */
@@ -10,16 +11,23 @@ header {
     position: fixed;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     width: 100%;
+    z-index: 2;
+    background-color: white;
 }
 
-.header{
+@font-face {
+    src: url("/circular-std-font-family/CircularStd-Black.woff2");
+    font-family: "Circular Std", Sans-serif;
+}
+
+.header {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 71px;
-    font-family: 'Public Sans', sans-serif;
     padding: 10px 0px;
 }
+
 .container {
     max-width: 1440px;
     margin: 0px auto;
@@ -145,7 +153,6 @@ header {
 /* Mobile Navbar */
 
 @media only screen and (max-width:1280px) {
-
     .container .nav,
     .container .cta-nav {
         display: none;
@@ -222,9 +229,6 @@ header {
     .mob-nav .nav .drop:hover>ul {
         display: none;
     }
-    main{
-        display: none;
-    }
 }
 
 /* Mobile Navbar */
@@ -235,11 +239,11 @@ header {
 
 /* HeroSection Start */
 
-main{
+main {
     padding-top: 0px;
 }
 
-.hero-section{
+.hero-section {
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
@@ -247,36 +251,80 @@ main{
     height: calc(95vh - 71px);
 }
 
-.hero-section .left-section{
+.hero-section .left-section {
     position: relative;
     top: -10%;
 }
 
-.hero-section .left-section h1{
+.hero-section .left-section h1 {
     font-size: 36px;
     width: 30%;
     margin-bottom: 20px;
     font-weight: 600;
 }
 
-.hero-section .left-section .tagLine{
+.hero-section .left-section .tagLine {
     width: 64%;
     margin-bottom: 20px;
     font-size: 21px;
     font-weight: 400;
 }
 
-.hero-section .right-section img{
+.hero-section .right-section img {
     width: 400px;
     position: relative;
     top: -103px;
     left: 0px;
 }
 
-.right-section{
+.right-section {
     width: 400px;
     height: 400px;
     background: linear-gradient(180deg, #97d78f 0, #ede070 100%);
     border-radius: 100%;
     position: relative;
 }
+
+@media only screen and (max-width:567px) {
+    body{
+        height: 200vh;
+    }
+    .hero-section .left-section {
+        order: 1;
+    }
+
+    .hero-section {
+        flex-direction: column;
+        padding-top: 17rem;
+        text-align: center;
+    }
+
+    .hero-section .left-section h1,
+    .hero-section .left-section .tagLine {
+        width: 100%;
+    }
+
+    .hero-section .left-section h1{
+        font-size: 26px;
+    }
+
+    .hero-section .right-section{
+        width: 250px;
+        height: 250px;
+        margin-bottom: 3rem;
+        margin: 0px auto;
+        margin-bottom: 73px;
+    }
+
+    .hero-section .right-section img{
+        width: 100%;
+        top: -64px;
+    }
+
+    .hero-section .left-section .download-cta{
+        margin: 0px auto;
+    }
+
+}
+
+/* HeroSection End */
