--- a/index.css
+++ b/index.css
@@ -297,6 +297,7 @@ main {
         flex-direction: column;
         padding-top: 17rem;
         text-align: center;
+        margin: 0px auto;
     }
 
     .hero-section .left-section h1,
